Fixed stretched images.

--- a/css/main.css
+++ b/css/main.css
@@ -89,9 +89,7 @@ article p {
 }
 
 article img {
-    min-height: 6em;
     max-height: 20em;
-    min-width: 15%;
     max-width: 45%;
     margin: 0 auto;
     display: inline-block;
